Fix: footer cta width fixed by wrapping in div. Footer nav width adjusted up to 290px to avoid rows not wrapping just below 600px screen width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,7 +591,7 @@ footer li a:hover {
 }
 
 #connect-right-block {
-    min-width: 280px;
+    min-width: 290px;
 }
 
 #footer-connect h3 {
